# 00p3

./: README.md  georgii_kozlov_lb1_oop.docx  georgii_kozlov_lb1_oop_01.docx
shipgame/: game
shipgame/include/: GameField.h  ShipManager.h
shipgame/src/: GameField.cpp
untitled/: Ability.h  AbilityException.cpp  AbilityException.h  AbilityManager.cpp  AbilityManager.h  AttackOutOfField.cpp  AttackOutOfField.h  Bombing.cpp  Bombing.h  CMakeLists.txt  DoubleDamage.cpp  DoubleDamage.h  Exception.cpp  Exception.h  Game.cpp  Game.h  GameField.cpp  GameField.h  PlaceShipException.cpp  PlaceShipException.h  Scanner.cpp  Scanner.h  Ship.h  ShipManager.cpp  ShipManager.h  main.cpp
